--- a/src/Bix/Autofac/Bix.Autofac.csproj
+++ b/src/Bix/Autofac/Bix.Autofac.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.1;netstandard2.0;net462;net472</TargetFrameworks>
+    <TargetFrameworks>netstandard2.1;net462;net472;net48</TargetFrameworks>
     <Platforms>AnyCPU;x64</Platforms>
     <LangVersion>latest</LangVersion>
     <Description>Autofac support for Bix</Description>
@@ -28,9 +28,9 @@
   <Import Project="..\..\BixShared.targets" />
 
   <ItemGroup>
-    <PackageReference Include="Autofac" Version="4.9.4" />
+    <PackageReference Include="Autofac" Version="6.1.0" />
     <PackageReference Include="HangFire.Autofac" Version="2.3.1" />
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
 </Project>
