--- a/src/Bix/IO.HttpClient/Bix.IO.HttpClient.csproj
+++ b/src/Bix/IO.HttpClient/Bix.IO.HttpClient.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.1;netstandard2.0;net462;net472</TargetFrameworks>
+    <TargetFrameworks>netstandard2.1;net462;net472;net48</TargetFrameworks>
     <Platforms>AnyCPU;x64</Platforms>
     <LangVersion>latest</LangVersion>
     <Description>Network data transfer HTTP client for Bix</Description>
@@ -41,7 +41,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
   <ItemGroup>
