--- a/src/Bix/Repositories/Restful.HttpClient/Bix.Repositories.Restful.HttpClient.csproj
+++ b/src/Bix/Repositories/Restful.HttpClient/Bix.Repositories.Restful.HttpClient.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.1;netstandard2.0;net462;net472</TargetFrameworks>
+    <TargetFrameworks>netstandard2.1;net462;net472;net48</TargetFrameworks>
     <Platforms>AnyCPU;x64</Platforms>
     <LangVersion>latest</LangVersion>
     <Description>RESTful HTTP client repository framework for Bix</Description>
@@ -41,8 +41,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
-    <PackageReference Include="Serilog" Version="2.9.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="Serilog" Version="2.10.0" />
   </ItemGroup>
 
   <ItemGroup>
