--- a/src/BixShared.targets
+++ b/src/BixShared.targets
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Project  Sdk="Microsoft.NET.Sdk">
+<Project ToolsVersion="Current" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Authors>Riley White</Authors>
@@ -12,7 +12,7 @@
     <PackageTags>bix business-mix restful webapi aspnetcore</PackageTags>
     <Version>3.1.0</Version>
     <NoWarn>$(NoWarn);NU5105</NoWarn>
-
+  
     <!-- Microsoft.SourceLink Configuration  -->
     <PublishRepositoryUrl>true</PublishRepositoryUrl>
     <EmbedUntrackedSources>true</EmbedUntrackedSources>
@@ -20,12 +20,12 @@
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     <PackageOutputPath>$(SolutionDir)..\packages\</PackageOutputPath>
   </PropertyGroup>
-
+  
   <!-- Reference Github SourceLink package for all projects  -->
   <ItemGroup>
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All"/>
   </ItemGroup>
-
+  
   <PropertyGroup Condition="'$(Configuration)'=='Release'">
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
