--- a/src/Bix/IO.HttpClient/Bix.IO.HttpClient.csproj
+++ b/src/Bix/IO.HttpClient/Bix.IO.HttpClient.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net462;net472;net48</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;net462;net472;net48;netstandard2.1</TargetFrameworks>
     <Platforms>AnyCPU;x64</Platforms>
     <LangVersion>latest</LangVersion>
     <Description>Network data transfer HTTP client for Bix</Description>
@@ -41,13 +41,17 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Http.Client\Bix.Http.Client.csproj" />
     <ProjectReference Include="..\Http.Core\Bix.Http.Core.csproj" />
     <ProjectReference Include="..\IO\Bix.IO.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Update="Microsoft.SourceLink.GitHub" Version="1.1.1" />
   </ItemGroup>
 
 </Project>
