--- a/src/Bix/Repositories/EntityFramework/Bix.Repositories.EntityFramework.csproj
+++ b/src/Bix/Repositories/EntityFramework/Bix.Repositories.EntityFramework.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net462;net472;net48</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;net462;net472;net48;netstandard2.1</TargetFrameworks>
     <Platforms>AnyCPU;x64</Platforms>
     <LangVersion>latest</LangVersion>
     <Description>Entity Framework Core repository framework for Bix</Description>
@@ -29,11 +29,15 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.11" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.24" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\Core\Bix.Core.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Update="Microsoft.SourceLink.GitHub" Version="1.1.1" />
   </ItemGroup>
 
 </Project>
