--- a/src/Bix/Repositories/Restful.HttpClient/Bix.Repositories.Restful.HttpClient.csproj
+++ b/src/Bix/Repositories/Restful.HttpClient/Bix.Repositories.Restful.HttpClient.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net462;net472;net48</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;net462;net472;net48;netstandard2.1</TargetFrameworks>
     <Platforms>AnyCPU;x64</Platforms>
     <LangVersion>latest</LangVersion>
     <Description>RESTful HTTP client repository framework for Bix</Description>
@@ -41,7 +41,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Serilog" Version="2.10.0" />
   </ItemGroup>
 
@@ -50,6 +50,10 @@
     <ProjectReference Include="..\..\Http.Client\Bix.Http.Client.csproj" />
     <ProjectReference Include="..\..\Http.Core\Bix.Http.Core.csproj" />
     <ProjectReference Include="..\..\IO\Bix.IO.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Update="Microsoft.SourceLink.GitHub" Version="1.1.1" />
   </ItemGroup>
 
 </Project>
