--- a/src/Bix/Repositories/Restful.WebApi/Bix.Repositories.Restful.WebApi.csproj
+++ b/src/Bix/Repositories/Restful.WebApi/Bix.Repositories.Restful.WebApi.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net462;net472;net48</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;net462;net472;net48;netstandard2.1</TargetFrameworks>
     <Platforms>AnyCPU;x64</Platforms>
     <LangVersion>latest</LangVersion>
     <Description>RESTful ASPNETCORE server repository-forwarding support for Bix</Description>
@@ -37,6 +37,10 @@
     <ProjectReference Include="..\..\Core\Bix.Core.csproj" />
     <ProjectReference Include="..\..\IO\Bix.IO.csproj" />
     <ProjectReference Include="..\..\WebApi.Core\Bix.WebApi.Core.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Update="Microsoft.SourceLink.GitHub" Version="1.1.1" />
   </ItemGroup>
 
 </Project>
