--- a/src/Bix/WebApi.Core/Bix.WebApi.Core.csproj
+++ b/src/Bix/WebApi.Core/Bix.WebApi.Core.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net462;net472;net48</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;net462;net472;net48;netstandard2.1</TargetFrameworks>
     <Platforms>AnyCPU;x64</Platforms>
     <LangVersion>latest</LangVersion>
     <Description>ASPNETCORE WebApi support for Bix</Description>
@@ -36,6 +36,10 @@
   <ItemGroup>
     <ProjectReference Include="..\Core\Bix.Core.csproj" />
     <ProjectReference Include="..\Http.Hmac\Bix.Http.Hmac.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Update="Microsoft.SourceLink.GitHub" Version="1.1.1" />
   </ItemGroup>
 
 </Project>
