--- a/src/Bix/Http.Hmac/Bix.Http.Hmac.csproj
+++ b/src/Bix/Http.Hmac/Bix.Http.Hmac.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <PackageReference Include="IPNetwork2" Version="2.5.412" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication" Version="2.2.0" />
+    <PackageReference Include="Microsoft.SourceLink.GitHub" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="NodaTime" Version="3.0.10" />
   </ItemGroup>
@@ -53,7 +54,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Update="Microsoft.SourceLink.GitHub" Version="1.1.1" />
+    <PackageReference Update="Microsoft.SourceLink.GitHub" Version="1.1.1">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
 </Project>
