--- a/src/Bix/Http.Core/Bix.Http.Core.csproj
+++ b/src/Bix/Http.Core/Bix.Http.Core.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   
   <ItemGroup>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" />
     <PackageReference Include="NodaTime" Version="3.0.10" />
   </ItemGroup>
 
@@ -49,7 +50,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Update="Microsoft.SourceLink.GitHub" Version="1.1.1" />
+    <PackageReference Update="Microsoft.SourceLink.GitHub" Version="1.1.1">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
 </Project>
