--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,15 +10,11 @@ before_build:
 build:
   verbosity: minimal
 
-artifacts:
-- path: /.*(\.|\.s)nupkg/
-  name: Bix Packages
-
 deploy:
 - provider: NuGet
   api_key:
     secure: 0WJJyoL3KDd4D3PoaKD08XGwqWNjCbH2YM/gfFQNC79sWWrpWyV16DWPjEXELgZl
   skip_symbols: false
-  artifact: Bix Packages
+  artifact: /.*(\.|\.s)nupkg/
   on:
     branch: main
